--- a/styles/terminal.css
+++ b/styles/terminal.css
@@ -54,3 +54,31 @@
     opacity: 0;
   }
 }
+
+#game-btns {
+  flex-direction: row;
+  justify-content: space-around;
+  padding: 20px;
+}
+
+.btn-img {
+  height: 50px;
+  padding: 5px;
+}
+
+.box4 {
+  width: 60px;
+  height: 60px;
+  padding: 5px;
+  background-color: rgb(56, 56, 56);
+  border: 2px solid rgb(146, 105, 249);
+  cursor: pointer;
+}
+
+svg {
+  color: rgb(146, 105, 249);
+}
+svg:hover {
+  background-color: rgb(17, 17, 17);
+  border-color: rgb(145, 255, 86);
+}
