--- a/styles/terminal.css
+++ b/styles/terminal.css
@@ -67,18 +67,37 @@
 }
 
 .box4 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 60px;
   height: 60px;
-  padding: 5px;
+
   background-color: rgb(56, 56, 56);
   border: 2px solid rgb(146, 105, 249);
   cursor: pointer;
 }
 
 svg {
-  color: rgb(146, 105, 249);
+  fill: rgb(146, 105, 249);
+  width: 60px;
+  padding: 15px;
 }
 svg:hover {
+  fill: rgb(145, 255, 86);
+}
+
+.box4:hover {
   background-color: rgb(17, 17, 17);
   border-color: rgb(145, 255, 86);
+}
+
+#rock,
+#paper,
+#scissors {
+  width: 60px;
+  height: 60px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
