--- a/styles/terminal.css
+++ b/styles/terminal.css
@@ -72,10 +72,6 @@
   align-items: center;
   width: 60px;
   height: 60px;
-
-  background-color: rgb(56, 56, 56);
-  border: 2px solid rgb(146, 105, 249);
-  cursor: pointer;
 }
 
 svg {
@@ -87,7 +83,7 @@ svg:hover {
   fill: rgb(145, 255, 86);
 }
 
-.box4:hover {
+button:hover {
   background-color: rgb(17, 17, 17);
   border-color: rgb(145, 255, 86);
 }
@@ -115,4 +111,10 @@ svg:hover {
 }
 .hidden {
   display: none;
+}
+button {
+  background-color: rgb(56, 56, 56);
+  background-color: rgb(56, 56, 56);
+  border: 2px solid rgb(146, 105, 249);
+  cursor: pointer;
 }
