--- a/styles/terminal.css
+++ b/styles/terminal.css
@@ -29,13 +29,13 @@
 #clear {
   opacity: 0;
 }
-#test {
+#game-display {
   position: relative;
   display: flex;
   flex-direction: column;
   width: 385px;
 }
-#test p {
+#game-display p {
   padding: 15px 0 0 0;
 }
 .statistics {
@@ -137,4 +137,7 @@ button {
   background-color: rgb(56, 56, 56);
   border: 2px solid rgb(146, 105, 249);
   cursor: pointer;
+}
+.inline {
+  display: inline;
 }
