--- a/styles/terminal.css
+++ b/styles/terminal.css
@@ -12,7 +12,6 @@
   background: #d7d7d7;
   font-family: 'Fira Code', monospace, sans-serif;
 }
-
 #window {
   position: absolute;
   top: 10px;
@@ -23,11 +22,6 @@
   background: #464646;
   font-size: 15px;
   color: rgb(145, 255, 86);
-}
-
-#hackerName,
-#clear {
-  opacity: 0;
 }
 #game-display {
   position: relative;
@@ -143,4 +137,34 @@ button {
 }
 #re-head {
   margin-bottom: 10px;
+}
+
+@media only screen and (max-width: 500px) {
+  #terminal {
+    width: 366px;
+  }
+  #window {
+    width: 346px;
+    font-size: 12px;
+  }
+  #game-display {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    width: 346px;
+  }
+  #game-display p {
+    padding: 15px 0 0 0;
+  }
+  .statistics {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 10px;
+    width: 300px;
+    height: 110px;
+  }
+  #par,
+  #result--txt {
+    font-size: 10px;
+  }
 }
