--- a/styles/style.css
+++ b/styles/style.css
@@ -1,47 +1,71 @@
+/* reset */
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
+/* layout */
 body {
   color: aliceblue;
   background-color: rgb(40, 39, 42);
   min-height: 100vh;
+  font-family: 'Fira Code', monospace, sans-serif;
 }
 .container {
-  padding-top: 15px;
+  padding: 15px 0;
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 15px;
 }
-.play a,
-h1 {
-  font-family: 'Press Start 2P', sans-serif;
-  color: rgb(123, 71, 255);
-  text-align: center;
-}
+/* big retro text */
 h1 {
   font-size: 32px;
   padding: 10px 0;
   line-height: 50px;
   letter-spacing: 2px;
+}
+h1,
+.play a {
+  font-family: 'Press Start 2P', sans-serif;
+  color: rgb(123, 71, 255);
+  text-align: center;
+  text-decoration: none;
   text-shadow: 0 1px 0 rgb(145, 255, 86), 0 2px 0 rgb(145, 255, 86),
-    0 3px 0 rgb(145, 255, 86), 0 4px 0 rgb(145, 255, 86),
-    0 5px 0 rgb(145, 255, 86), 0 6px 0 rgb(255, 210, 86),
-    0 7px 0 rgb(255, 210, 86), 0 8px 0 rgb(255, 210, 86),
-    0 9px 0 rgb(255, 210, 86), 0 10px 0 rgb(255, 210, 86),
-    0 11px 0 rgb(255, 210, 86), 0 12px 0 rgb(255, 210, 86);
+    0 3px 0 rgb(145, 255, 86), 0 4px 0 rgb(255, 210, 86),
+    0 5px 0 rgb(255, 210, 86), 0 6px 0 rgb(255, 210, 86);
 }
-
-.rules {
-  font-family: 'Fira Code', sans-serif;
-  font-weight: bold;
-  text-transform: uppercase;
-  letter-spacing: 5px;
+.play a:hover {
   color: rgb(145, 255, 86);
-  margin-top: 20px;
+  text-shadow: 0 1px 0 rgb(123, 71, 255), 0 2px 0 rgb(123, 71, 255),
+    0 3px 0 rgb(123, 71, 255), 0 4px 0 rgb(123, 71, 255),
+    0 5px 0 rgb(123, 71, 255), 0 6px 0 rgb(123, 71, 255);
 }
+/* grid background */
+.background {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-bottom: 20px;
+  border-bottom: 2px solid rgb(123, 71, 255);
+}
+.background::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-image: url(../images/batthern.png);
+  opacity: 0.25;
+}
+/* rule section styles */
+.rules {
+  font-weight: bold;
+  letter-spacing: 5px;
+}
+.rules,
 .des-txt strong {
   color: rgb(145, 255, 86);
   text-transform: uppercase;
@@ -49,61 +73,24 @@ h1 {
 .des-txt b {
   color: rgb(123, 71, 255);
 }
-.des-txt p {
-  padding: 20px;
-  line-height: 15px;
-}
+/* general styles */
 .des-txt {
-  border: 2px solid rgb(123, 71, 255);
   font-family: monospace;
   display: flex;
+  gap: 15px;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   width: 450px;
+  padding: 15px;
 }
-
-.command,
-.option {
-  max-height: 25px;
+.term,
+.des-txt {
+  border: 2px solid rgb(123, 71, 255);
 }
-.shift {
-  max-height: 80px;
-}
-.j-key {
-  color: black;
-  font-family: 'Poppins';
-  font-weight: bolder;
-  font-size: 16px;
-}
-.keys {
-  display: flex;
-  justify-content: center;
-  gap: 30px;
-  margin: 0 0 10px 0;
-}
-.box1 {
-  width: 40px;
-  height: 40px;
-}
-.box2 {
-  height: 40px;
-}
-.box3 {
-  width: 150px;
-  height: 45px;
-}
-.box1,
-.box2 {
-  background-color: rgb(123, 71, 255);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 10px;
-  border: 2px solid rgb(146, 105, 249);
-}
-.play {
-  padding-bottom: 20px;
+/* buttons */
+.home-play-btn {
+  width: 450px;
 }
 #restart-btn,
 #home-btn,
@@ -126,53 +113,8 @@ h1 {
 #restart-btn {
   margin-top: 15px;
 }
-.play a {
-  text-decoration: none;
-  text-shadow: 0 1px 0 rgb(145, 255, 86), 0 2px 0 rgb(145, 255, 86),
-    0 3px 0 rgb(145, 255, 86), 0 4px 0 rgb(255, 210, 86),
-    0 5px 0 rgb(255, 210, 86), 0 6px 0 rgb(255, 210, 86);
-}
-.play a:hover {
-  color: rgb(145, 255, 86);
-  text-shadow: 0 1px 0 rgb(123, 71, 255), 0 2px 0 rgb(123, 71, 255),
-    0 3px 0 rgb(123, 71, 255), 0 4px 0 rgb(123, 71, 255),
-    0 5px 0 rgb(123, 71, 255), 0 6px 0 rgb(123, 71, 255);
-}
-
-.background {
-  position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding-bottom: 20px;
-  border-bottom: 2px solid rgb(123, 71, 255);
-}
-.background::before {
-  content: '';
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  background-image: url(../images/batthern.png);
-  opacity: 0.25;
-}
-.des-btn {
-  display: flex;
-  gap: 15px;
-}
-.pad-b {
-  padding-bottom: 15px;
-}
-.home-play-btn {
-  width: 450px;
-}
-
 /* responsive design */
 @media only screen and (max-width: 500px) {
-  .pad-b {
-    display: none;
-  }
   .home-play-btn,
   .des-txt {
     max-width: 370px;
