--- a/styles/terminal.css
+++ b/styles/terminal.css
@@ -138,6 +138,10 @@ button {
 #re-head {
   margin-bottom: 10px;
 }
+.des-btn {
+  display: flex;
+  gap: 15px;
+}
 
 @media only screen and (max-width: 500px) {
   #terminal {
